--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,9 +1,7 @@
 node_modules/
 
-node_modules/
-
 # Ignore backend build output
-frontend/backend/dist/
+backend/dist/
 
 # Ignore frontend bundle
-frontend/frontend/public/bundle.js
+frontend/public/bundle.js
