--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "description": "SignSync project",
   "main": "frontend/src/index.js",
   "scripts": {
-     "build": "webpack && babel backend/server.js -d backend/dist",
+    "build": "webpack && babel backend/server.js -d backend/dist",
     "start": "npm run build && node backend/dist/server.js",
     "watch": "webpack -w"
   },
@@ -25,7 +25,9 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
+    "autoprefixer": "^10.4.21",
     "babel-loader": "^9.1.3",
+    "postcss": "^8.5.3",
     "tailwindcss": "^3.4.13",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
