--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "author": "Apollo Projects",
   "license": "ISC",
   "dependencies": {
+    "@mediapipe/tasks-vision": "^0.10.22-rc.20250304",
     "css-loader": "^7.1.2",
     "express": "^4.20.0",
     "path": "^0.12.7",
@@ -27,6 +28,7 @@
     "@babel/preset-react": "^7.24.7",
     "autoprefixer": "^10.4.21",
     "babel-loader": "^9.1.3",
+    "file-loader": "^6.2.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.13",
     "webpack": "^5.94.0",
