--- a/requirements.txt
+++ b/requirements.txt
@@ -104,3 +104,8 @@ wrapt==1.17.2
 yarg==0.1.9
 fastapi==0.110.1
 uvicorn==0.29.0
+websockets==12.0
+python-multipart==0.0.9
+aiofiles==23.2.1
+vosk==0.3.45
+soundfile==0.12.1
