--- a/Sign-Sync/package.json
+++ b/Sign-Sync/package.json
@@ -14,6 +14,7 @@
     "@mediapipe/tasks-vision": "^0.10.22-rc.20250304",
     "css-loader": "^7.1.2",
     "express": "^4.20.0",
+    "mongodb": "^6.9.0",
     "path": "^0.12.7",
     "postcss-loader": "^8.1.1",
     "react": "^18.3.1",
