--- a/requirements.txt
+++ b/requirements.txt
@@ -109,3 +109,6 @@ python-multipart==0.0.9
 aiofiles==23.2.1
 vosk==0.3.45
 soundfile==0.12.1
+pytest==8.2.0
+pytest-asyncio==0.23.6
+httpx==0.27.0  
