--- a/Sign-Sync/package.json
+++ b/Sign-Sync/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@mediapipe/tasks-vision": "^0.10.22-rc.20250304",
+    "audio-recorder-polyfill": "^0.4.1",
     "css-loader": "^7.1.2",
     "express": "^4.20.0",
     "mongodb": "^6.9.0",
