--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,17 +1,23 @@
-name: Super Linter
-on: [push, pull_request]
+name: Super-Linter
+
+on: push
 
 jobs:
-  super-linter:
-    name: Lint React & Python
+  super-lint:
+    name: Lint code base
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: github/super-linter@v5
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Run Super-Linter
+        uses: github/super-linter@v5
         env:
           DEFAULT_BRANCH: main
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VALIDATE_ALL_CODEBASE: true
           VALIDATE_JAVASCRIPT_ES: true   # For React JS/TS
           VALIDATE_PYTHON_FLAKE8: true   # For Python (flake8)
           VALIDATE_PYTHON_PYLINT: true   # Optional: Also run pylint
           VALIDATE_PYTHON_BLACK: false   # Optional: Enable if using Black formatter
+          VALIDATE_ALL_CODEBASE: false
