--- a/Sign-Sync/package.json
+++ b/Sign-Sync/package.json
@@ -4,7 +4,7 @@
   "description": "SignSync project",
   "main": "frontend/src/index.js",
   "scripts": {
-    "build": "webpack && babel backend/server.js backend/auth-service/userApi.js --out-dir backend/dist",
+    "build": "webpack && npx babel backend/server.js backend/auth-service/userApi.js --out-dir backend/dist",
     "start": "npm run build && node backend/dist/server.js",
     "watch": "webpack -w",
     "test": "jest --watchAll",
@@ -13,7 +13,7 @@
   "jest": {
     "testEnvironment": "node",
     "setupFilesAfterEnv": [
-      "./__tests__/jest.setup.js"
+      "./jest.setup.js"
     ]
   },
   "author": "Apollo Projects",
@@ -32,9 +32,9 @@
     "style-loader": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.25.6",
-    "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.4",
+    "@babel/cli": "^7.27.2",
+    "@babel/core": "^7.27.3",
+    "@babel/preset-env": "^7.27.2",
     "@babel/preset-react": "^7.24.7",
     "autoprefixer": "^10.4.21",
     "babel-loader": "^9.1.3",
