--- a/Sign-Sync/package.json
+++ b/Sign-Sync/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "@mediapipe/tasks-vision": "^0.10.22-rc.20250304",
+    "@react-three/drei": "^10.2.0",
     "@react-three/fiber": "^8.18.0",
     "audio-recorder-polyfill": "^0.4.1",
     "css-loader": "^7.1.2",
