--- a/Sign-Sync/package.json
+++ b/Sign-Sync/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@mediapipe/tasks-vision": "^0.10.22-rc.20250304",
     "audio-recorder-polyfill": "^0.4.1",
+    "bcrypt": "^6.0.0",
     "css-loader": "^7.1.2",
     "express": "^4.20.0",
     "framer-motion": "^12.16.0",
