--- a/Sign-Sync/package.json
+++ b/Sign-Sync/package.json
@@ -23,6 +23,7 @@
     "audio-recorder-polyfill": "^0.4.1",
     "bcrypt": "^6.0.0",
     "css-loader": "^7.1.2",
+    "dotenv": "^16.5.0",
     "express": "^4.20.0",
     "framer-motion": "^12.16.0",
     "mongodb": "^6.9.0",
