--- a/Sign-Sync/package.json
+++ b/Sign-Sync/package.json
@@ -25,7 +25,7 @@
     "css-loader": "^7.1.2",
     "dotenv": "^16.5.0",
     "express": "^4.20.0",
-    "framer-motion": "^12.16.0",
+    "framer-motion": "^12.19.1",
     "mongodb": "^6.9.0",
     "path": "^0.12.7",
     "postcss-loader": "^8.1.1",
@@ -40,15 +40,21 @@
     "@babel/core": "^7.27.3",
     "@babel/preset-env": "^7.27.2",
     "@babel/preset-react": "^7.24.7",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "autoprefixer": "^10.4.21",
     "babel-loader": "^9.1.3",
     "file-loader": "^6.2.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.2",
     "mongodb-memory-server": "^10.1.4",
     "postcss": "^8.5.3",
     "supertest": "^7.1.1",
     "tailwindcss": "^3.4.13",
+    "util": "^0.12.5",
     "webpack": "^5.94.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "whatwg-url": "^14.2.0"
   }
 }
