--- a/Sign-Sync/package.json
+++ b/Sign-Sync/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.26.2",
+    "react-toastify": "^11.0.5",
     "style-loader": "^4.0.0",
     "three": "^0.177.0"
   },
