--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,20 +2,30 @@ name: Build
 
 on:
   push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+    branches: [ "main" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
+      # Frontend build
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+      
+      - name: Install frontend dependencies
+        run: npm install
+        working-directory: ./Sign-Sync
+
+      - name: Build frontend
+        run: npm start
+        working-directory: ./Sign-Sync
+
+      # Backend setup
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -23,9 +33,4 @@ jobs:
 
       - name: Install Python dependencies
         run: |
-          python -m pip install --upgrade pip
-          if [ -f "requirements.txt" ]; then
-            pip install -r requirements.txt
-          else
-            echo "No requirements.txt file found. Skipping dependency installation."
-          fi
+          pip install -r requirements.txt
