--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -13,11 +13,9 @@ jobs:
       - name: Run Super-Linter
         uses: github/super-linter@v5
         env:
+          # Force full validation (avoids Git diff issues)
+          VALIDATE_ALL_CODEBASE: "true"
+          # Disable "only changed files" mode
+          VALIDATE_ONLY_CHANGED_FILES: "false"
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          VALIDATE_ALL_CODEBASE: true
-          VALIDATE_JAVASCRIPT_ES: true   # For React JS/TS
-          VALIDATE_PYTHON_FLAKE8: true   # For Python (flake8)
-          VALIDATE_PYTHON_PYLINT: true   # Optional: Also run pylint
-          VALIDATE_PYTHON_BLACK: false   # Optional: Enable if using Black formatter
-          VALIDATE_ALL_CODEBASE: false
