--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,11 @@ jobs:
         with:
           python-version: '3.10'
 
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgl1 libglib2.0-0
+
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
@@ -31,18 +36,18 @@ jobs:
           fi
 
       - name: Run Python tests
-        run: |
-          if [ -f "Sign-Sync/__tests__" ]; then
-            pytest Sign-Sync/__tests__
-          else
-            echo "No tests directory found. Skipping Python tests."
-          fi
+        run: python -m pytest
+          # if [ -f "Sign-Sync/__tests__" ]; then
+          #   pytest Sign-Sync/__tests__
+          # else
+          #   echo "No tests directory found. Skipping Python tests."
+          # fi
 
-      - name: Install node dependencies
-        run: npm install
-        working-directory: ./Sign-Sync
+      # - name: Install node dependencies
+      #   run: npm install
+      #   working-directory: ./Sign-Sync
 
-      - name: Run Rejex tests
-        run: npm test
-        working-directory: ./Sign-Sync
-        timeout-minutes: 1
+      # - name: Run Rejex tests
+      #   run: npm test
+      #   working-directory: ./Sign-Sync
+      #   timeout-minutes: 1
