--- a/requirements.txt
+++ b/requirements.txt
@@ -91,6 +91,7 @@ tensorflow==2.19.0
 termcolor==3.1.0
 threadpoolctl==3.6.0
 tinycss2==1.4.0
+torch==2.8.0
 tornado==6.5
 traitlets==5.14.3
 typing_extensions==4.13.2
