using correct Azure port now

--- a/Sign-Sync/backend/alphabetTranslate-service/Dockerfile
+++ b/Sign-Sync/backend/alphabetTranslate-service/Dockerfile
@@ -4,6 +4,8 @@ WORKDIR /app
 
 COPY . .
 
-EXPOSE 8000
+# Read port from env or default to 8000
+ENV PORT=${PORT:-8000}
+EXPOSE ${PORT}
 
-CMD ["uvicorn", "translator_api:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["sh", "-c", "uvicorn translator_api:app --host 0.0.0.0 --port $PORT"]
