--- a/Sign-Sync/backend/alphabetTranslate-service/Dockerfile
+++ b/Sign-Sync/backend/alphabetTranslate-service/Dockerfile
@@ -4,8 +4,7 @@ WORKDIR /app
 
 COPY . .
 
-# Read port from env or default to 8000
-ENV PORT=${PORT:-8000}
-EXPOSE ${PORT}
+EXPOSE 8000
 
-CMD ["sh", "-c", "uvicorn translator_api:app --host 0.0.0.0 --port $PORT"]
+CMD ["uvicorn", "translator_api:app", "--host", "0.0.0.0", "--port", "8000"]
+
