--- a/Sign-Sync/backend/textToAslGloss-service/Dockerfile
+++ b/Sign-Sync/backend/textToAslGloss-service/Dockerfile
@@ -8,12 +8,6 @@ RUN python -m spacy download en_core_web_sm && \
 
 COPY . .
 
-#EXPOSE 8002
+EXPOSE 8002
 
-#CMD ["uvicorn", "textConversion_api:app", "--host", "0.0.0.0", "--port", "8002"]
-
-# Read port from env or default to 8002
-ENV PORT=${PORT:-8002}
-EXPOSE ${PORT}
-
-CMD ["sh", "-c", "uvicorn textConversion_api:app --host 0.0.0.0 --port $PORT"]
+CMD ["uvicorn", "textConversion_api:app", "--host", "0.0.0.0", "--port", "8002"]
