--- a/Sign-Sync/backend/wordPrediction-service/Dockerfile
+++ b/Sign-Sync/backend/wordPrediction-service/Dockerfile
@@ -4,12 +4,6 @@ WORKDIR /app
 
 COPY . .
 
-#EXPOSE 8005
+EXPOSE 8005
 
-#CMD ["uvicorn", "API:app", "--host", "0.0.0.0", "--port", "8005"]
-
-# Read port from env or default to 8005
-ENV PORT=${PORT:-8005}
-EXPOSE ${PORT}
-
-CMD ["sh", "-c", "uvicorn API:app --host 0.0.0.0 --port $PORT"]
+CMD ["uvicorn", "API:app", "--host", "0.0.0.0", "--port", "8005"]
