--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,21 +26,57 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libgl1 libglib2.0-0
 
-      - name: Install Python dependencies
-        run: |
-          python -m pip install --upgrade pip
-          if [ -f "requirements.txt" ]; then
-            pip install -r requirements.txt
-          else
-            echo "No requirements.txt file found. Skipping dependency installation."
-          fi
+      # - name: Install Python dependencies
+      #   run: |
+      #     python -m pip install --upgrade pip
+      #     if [ -f "requirements.txt" ]; then
+      #       pip install -r requirements.txt
+      #     else
+      #       echo "No requirements.txt file found. Skipping dependency installation."
+      #     fi
 
-      - name: Run Python tests
+      # - name: Run Python tests
+      #   run: |
+      #     if [ -d "Sign-Sync/__tests__" ]; then
+      #       python -m pytest Sign-Sync/__tests__/
+      #     else
+      #       echo "No tests directory found. Skipping Python tests."
+      #     fi
+      
+      - name: Install dependencies for NFR tests
         run: |
-          if [ -d "Sign-Sync/__tests__" ]; then
-            python -m pytest Sign-Sync/__tests__/
+          sudo apt-get install -y openjdk-11-jdk wget
+          
+          # Install JMeter with correct directory handling
+          JMETER_VERSION="5.6.2"
+          JMETER_URL="https://archive.apache.org/dist/jmeter/binaries/apache-jmeter-${JMETER_VERSION}.tgz"
+          
+          echo "Downloading JMeter from: $JMETER_URL"
+          wget $JMETER_URL
+          
+          # Create directory first, then extract
+          sudo mkdir -p /opt/jmeter
+          tar -xzf apache-jmeter-${JMETER_VERSION}.tgz
+          
+          # Move contents to /opt/jmeter
+          sudo mv apache-jmeter-${JMETER_VERSION}/* /opt/jmeter/
+          sudo chmod +x /opt/jmeter/bin/*.sh
+          
+          # Add to PATH
+          echo "/opt/jmeter/bin" >> $GITHUB_PATH
+          
+          # Verify installation
+          /opt/jmeter/bin/jmeter --version
+
+      - name: Run NFR tests
+        run: |
+          # Check if the JMX file exists
+          if [ -f "NFR_Testing/Performance1.jmx" ]; then
+            echo "Running JMeter test: NFR_Testing/Performance1.jmx"
+            jmeter -n -t "NFR_Testing/Performance1.jmx" -l "NFR_Testing/results.jtl" -e -o "NFR_Testing/report"
           else
-            echo "No tests directory found. Skipping Python tests."
+            echo "JMX file not found. Looking for JMX files..."
+            find . -name "*.jmx" | head -5
+            echo "Available files in NFR_Testing directory:"
+            ls -la NFR_Testing/ 2>/dev/null || echo "NFR_Testing directory not found"
           fi
-      
-      
