--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -109,11 +109,10 @@ jobs:
             echo "Port $port is up!"
           done
 
-          # ---------------- Run tests ----------------
+          # ---------------- Run Python tests ----------------
           pytest -s -v ./NFR_Testing
           python Sign-Sync/backend/wordPrediction-service/unit/test_corrector.py
           python Sign-Sync/backend/wordPrediction-service/unit/test_node.py
           python Sign-Sync/backend/wordPrediction-service/unit/test_trie.py
 
-          #pytest -s -v Sign-Sync/backend/tests
           pytest -s -v Sign-Sync/backend/textToAslGloss-service
